# pokehack

./: .gitignore  CMakeLists.txt  Makefile  README  README.md
apps/: CMakeLists.txt
apps/cmd/: CMakeLists.txt  pkg3.c
apps/gui/: AttackComboBox.cpp  AttackComboBox.h  CMakeLists.txt  GameComboBox.cpp  GameComboBox.h  ItemComboBox.cpp  ItemComboBox.h  PokeballComboBox.cpp  SpeciesComboBox.cpp  main.cpp  window.cpp  window.h
data/: attacks.txt  items.txt  pokeballs.txt  species.txt
include/: CMakeLists.txt  pokestructs.h
include/pokehack/: CMakeLists.txt  SaveParser.h  config.h  data.h  pokestructs.h
lib/: CMakeLists.txt  SaveParser.cpp  attacks.c  data.c  items.c  misc.c  parsesav.c  pokemon_species.c  text.c
src/: AttackComboBox.cpp  AttackComboBox.h  GameComboBox.cpp  GameComboBox.h  ItemComboBox.cpp  ItemComboBox.h  Makefile  Makefile.Debug  Makefile.Release  PokeballComboBox.cpp  PokeballComboBox.h  SaveParser.cpp  SaveParser.h  SpeciesComboBox.cpp  SpeciesComboBox.h  StatusComboBox.cpp  StatusComboBox.h  attacks.c  items.c  main.cpp  misc.c  parsesav.c  pkg3.c  pokehack.pro  pokemon_species.c  window.cpp  window.h
